# django-todo-react

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/backend/: settings.py
backend/todo/migrations/: 0001_initial.py
frontend/: package-lock.json
