[tool.poetry]
name = "django-todo-react"
version = "0.1.0"
description = "Pomodoro timer application"
authors = ["Will Charles <williamgeorgecharles@gmail.com>"]
readme = "README.md"
packages = [{include = "django_todo_react"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
